examples/extension-server/envoy-config-dumps/without_envoyproxy_mtls.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
      "bootstrap": {
        "node": {
          "locality": {},
          "user_agent_name": "envoy",
          "user_agent_build_version": {
            "version": {
              "major_number": 1,
              "minor_number": 35,
              "patch": 3
            },
            "metadata": {
              "build.type": "RELEASE",
              "ssl.version": "BoringSSL",
              "revision.sha": "ff3fe7f0bb9e4ac6a283ea38bf9ee3f375530d56",
              "revision.status": "Clean"
            }
          },
          "extensions": [
            {
              "name": "quic.http_server_connection.default",
              "category": "quic.http_server_connection"
            },
            {
              "name": "envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
              "category": "envoy.upstream_options",
              "type_urls": [
                "envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
              ]
            },
            {
              "name": "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions",
              "category": "envoy.upstream_options",
              "type_urls": [
                "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions"
              ]
            },
            {
              "name": "envoy.upstreams.http.http_protocol_options",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.upstreams.tcp.tcp_protocol_options",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.access_loggers.extension_filters.cel",
              "category": "envoy.access_loggers.extension_filters",
              "type_urls": [
                "envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter"
              ]
            },
            {
              "name": "envoy.rds_factory.default",
              "category": "envoy.rds_factory"
            },
            {
              "name": "envoy.matching.common_inputs.environment_variable",
              "category": "envoy.matching.common_inputs",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.environment_variable.v3.Config"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.samplers.always_on",
              "category": "envoy.tracers.opentelemetry.samplers",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.samplers.v3.AlwaysOnSamplerConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.samplers.cel",
              "category": "envoy.tracers.opentelemetry.samplers",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.samplers.v3.CELSamplerConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.samplers.dynatrace",
              "category": "envoy.tracers.opentelemetry.samplers",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.samplers.v3.DynatraceSamplerConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.samplers.parent_based",
              "category": "envoy.tracers.opentelemetry.samplers",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.samplers.v3.ParentBasedSamplerConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.samplers.trace_id_ratio_based",
              "category": "envoy.tracers.opentelemetry.samplers",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.samplers.v3.TraceIdRatioBasedSamplerConfig"
              ]
            },
            {
              "name": "envoy.route_config_update_requester.default",
              "category": "envoy.route_config_update_requester"
            },
            {
              "name": "envoy.bandwidth_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.buffer",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.cors",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.csrf",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_proc",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.extensions.filters.http.dynamic_modules",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                "envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute"
              ]
            },
            {
              "name": "envoy.fault",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.adaptive_concurrency",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency"
              ]
            },
            {
              "name": "envoy.filters.http.admission_control",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.admission_control.v3.AdmissionControl"
              ]
            },
            {
              "name": "envoy.filters.http.alternate_protocols_cache",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.alternate_protocols_cache.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.api_key_auth",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.api_key_auth.v3.ApiKeyAuth",
                "envoy.extensions.filters.http.api_key_auth.v3.ApiKeyAuthPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.aws_lambda",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.aws_lambda.v3.Config",
                "envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.aws_request_signing",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning",
                "envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigningPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.bandwidth_limit",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.bandwidth_limit.v3.BandwidthLimit"
              ]
            },
            {
              "name": "envoy.filters.http.basic_auth",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.basic_auth.v3.BasicAuth",
                "envoy.extensions.filters.http.basic_auth.v3.BasicAuthPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.buffer",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.buffer.v3.Buffer",
                "envoy.extensions.filters.http.buffer.v3.BufferPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.cache",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.cache.v3.CacheConfig"
              ]
            },
            {
              "name": "envoy.filters.http.cdn_loop",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.cdn_loop.v3.CdnLoopConfig"
              ]
            },
            {
              "name": "envoy.filters.http.composite",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.composite.v3.Composite"
              ]
            },
            {
              "name": "envoy.filters.http.compressor",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.compressor.v3.Compressor",
                "envoy.extensions.filters.http.compressor.v3.CompressorPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.connect_grpc_bridge",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.cors",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.cors.v3.Cors",
                "envoy.extensions.filters.http.cors.v3.CorsPolicy"
              ]
            },
            {
              "name": "envoy.filters.http.credential_injector",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.credential_injector.v3.CredentialInjector"
              ]
            },
            {
              "name": "envoy.filters.http.csrf",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.csrf.v3.CsrfPolicy"]
            },
            {
              "name": "envoy.filters.http.custom_response",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.custom_response.v3.CustomResponse"
              ]
            },
            {
              "name": "envoy.filters.http.decompressor",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.decompressor.v3.Decompressor"
              ]
            },
            {
              "name": "envoy.filters.http.dynamic_forward_proxy",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig",
                "envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.ext_authz",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                "envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.ext_proc",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute",
                "envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              ]
            },
            {
              "name": "envoy.filters.http.fault",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.fault.v3.HTTPFault"]
            },
            {
              "name": "envoy.filters.http.file_system_buffer",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.file_system_buffer.v3.FileSystemBufferFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.gcp_authn",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.gcp_authn.v3.GcpAuthnFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.geoip",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.geoip.v3.Geoip"]
            },
            {
              "name": "envoy.filters.http.grpc_field_extraction",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_field_extraction.v3.GrpcFieldExtractionConfig"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_http1_bridge",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_http1_bridge.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_http1_reverse_bridge",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig",
                "envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_json_reverse_transcoder",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_json_reverse_transcoder.v3.GrpcJsonReverseTranscoder"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_json_transcoder",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_stats",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.grpc_stats.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_web",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"]
            },
            {
              "name": "envoy.filters.http.header_mutation",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutation",
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.header_to_metadata",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.header_to_metadata.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.health_check",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.health_check.v3.HealthCheck"
              ]
            },
            {
              "name": "envoy.filters.http.ip_tagging",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.ip_tagging.v3.IPTagging"
              ]
            },
            {
              "name": "envoy.filters.http.json_to_metadata",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.json_to_metadata.v3.JsonToMetadata"
              ]
            },
            {
              "name": "envoy.filters.http.jwt_authn",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication",
                "envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.local_ratelimit",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.http.lua",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.lua.v3.Lua",
                "envoy.extensions.filters.http.lua.v3.LuaPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.match_delegate",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.common.matching.v3.ExtensionWithMatcher",
                "envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.oauth2",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.oauth2.v3.OAuth2"]
            },
            {
              "name": "envoy.filters.http.on_demand",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.on_demand.v3.OnDemand",
                "envoy.extensions.filters.http.on_demand.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.original_src",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.original_src.v3.OriginalSrc"
              ]
            },
            {
              "name": "envoy.filters.http.proto_message_extraction",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.proto_message_extraction.v3.ProtoMessageExtractionConfig"
              ]
            },
            {
              "name": "envoy.filters.http.rate_limit_quota",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig",
                "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaOverride"
              ]
            },
            {
              "name": "envoy.filters.http.ratelimit",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.ratelimit.v3.RateLimit",
                "envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.rbac",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.rbac.v3.RBAC",
                "envoy.extensions.filters.http.rbac.v3.RBACPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.router",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.router.v3.Router"]
            },
            {
              "name": "envoy.filters.http.set_filter_state",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.set_filter_state.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.set_metadata",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.set_metadata.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.stateful_session",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.stateful_session.v3.StatefulSession",
                "envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.tap",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.tap.v3.Tap"]
            },
            {
              "name": "envoy.filters.http.thrift_to_metadata",
              "category": "envoy.filters.http",
              "type_urls": [
                "envoy.extensions.filters.http.thrift_to_metadata.v3.ThriftToMetadata"
              ]
            },
            {
              "name": "envoy.filters.http.wasm",
              "category": "envoy.filters.http",
              "type_urls": ["envoy.extensions.filters.http.wasm.v3.Wasm"]
            },
            {
              "name": "envoy.geoip",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_http1_bridge",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_json_transcoder",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_web",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.health_check",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ip_tagging",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.local_rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.lua",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.router",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.dog_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.graphite_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.metrics_service",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.open_telemetry_stat_sink",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.dog_statsd",
              "category": "envoy.stats_sinks",
              "type_urls": ["envoy.config.metrics.v3.DogStatsdSink"]
            },
            {
              "name": "envoy.stat_sinks.graphite_statsd",
              "category": "envoy.stats_sinks",
              "type_urls": [
                "envoy.extensions.stat_sinks.graphite_statsd.v3.GraphiteStatsdSink"
              ]
            },
            {
              "name": "envoy.stat_sinks.hystrix",
              "category": "envoy.stats_sinks",
              "type_urls": ["envoy.config.metrics.v3.HystrixSink"]
            },
            {
              "name": "envoy.stat_sinks.metrics_service",
              "category": "envoy.stats_sinks",
              "type_urls": ["envoy.config.metrics.v3.MetricsServiceConfig"]
            },
            {
              "name": "envoy.stat_sinks.open_telemetry",
              "category": "envoy.stats_sinks",
              "type_urls": [
                "envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig"
              ]
            },
            {
              "name": "envoy.stat_sinks.statsd",
              "category": "envoy.stats_sinks",
              "type_urls": ["envoy.config.metrics.v3.StatsdSink"]
            },
            {
              "name": "envoy.stat_sinks.wasm",
              "category": "envoy.stats_sinks",
              "type_urls": ["envoy.extensions.stat_sinks.wasm.v3.Wasm"]
            },
            {
              "name": "envoy.statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.config_mux.delta_grpc_mux_factory",
              "category": "envoy.config_mux"
            },
            {
              "name": "envoy.config_mux.grpc_mux_factory",
              "category": "envoy.config_mux"
            },
            {
              "name": "envoy.config_mux.new_grpc_mux_factory",
              "category": "envoy.config_mux"
            },
            {
              "name": "envoy.config_mux.sotw_grpc_mux_factory",
              "category": "envoy.config_mux"
            },
            {
              "name": "dubbo.hessian2",
              "category": "envoy.dubbo_proxy.serializers"
            },
            {
              "name": "envoy.listener_manager_impl.default",
              "category": "envoy.listener_manager_impl",
              "type_urls": ["envoy.config.listener.v3.ListenerManager"]
            },
            {
              "name": "envoy.listener_manager_impl.validation",
              "category": "envoy.listener_manager_impl",
              "type_urls": [
                "envoy.config.listener.v3.ValidationListenerManager"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.host",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.HostMatchInput"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.method",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.MethodMatchInput"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.path",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.PathMatchInput"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.property",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.PropertyMatchInput"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.request",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.RequestMatchInput"
              ]
            },
            {
              "name": "envoy.matching.generic_proxy.input.service",
              "category": "envoy.matching.generic_proxy_request_input.input",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.ServiceMatchInput"
              ]
            },
            {
              "name": "envoy.compression.brotli.decompressor",
              "category": "envoy.compression.decompressor",
              "type_urls": [
                "envoy.extensions.compression.brotli.decompressor.v3.Brotli"
              ]
            },
            {
              "name": "envoy.compression.gzip.decompressor",
              "category": "envoy.compression.decompressor",
              "type_urls": [
                "envoy.extensions.compression.gzip.decompressor.v3.Gzip"
              ]
            },
            {
              "name": "envoy.compression.zstd.decompressor",
              "category": "envoy.compression.decompressor",
              "type_urls": [
                "envoy.extensions.compression.zstd.decompressor.v3.Zstd"
              ]
            },
            {
              "name": "envoy.bootstrap.internal_listener",
              "category": "envoy.bootstrap",
              "type_urls": [
                "envoy.extensions.bootstrap.internal_listener.v3.InternalListener"
              ]
            },
            {
              "name": "envoy.bootstrap.wasm",
              "category": "envoy.bootstrap",
              "type_urls": ["envoy.extensions.wasm.v3.WasmService"]
            },
            {
              "name": "envoy.extensions.network.socket_interface.default_socket_interface",
              "category": "envoy.bootstrap",
              "type_urls": [
                "envoy.extensions.network.socket_interface.v3.DefaultSocketInterface"
              ]
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": ["envoy.extensions.transport_sockets.alts.v3.Alts"]
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
              ]
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.starttls.v3.StartTlsConfig"
              ]
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": ["envoy.extensions.transport_sockets.tap.v3.Tap"]
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.tcp_stats.v3.Config"
              ]
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.downstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              ]
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.retry_host_predicates.omit_canary_hosts",
              "category": "envoy.retry_host_predicates",
              "type_urls": [
                "envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate"
              ]
            },
            {
              "name": "envoy.retry_host_predicates.omit_host_metadata",
              "category": "envoy.retry_host_predicates",
              "type_urls": [
                "envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig"
              ]
            },
            {
              "name": "envoy.retry_host_predicates.previous_hosts",
              "category": "envoy.retry_host_predicates",
              "type_urls": [
                "envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate"
              ]
            },
            {
              "name": "envoy.key_value.file_based",
              "category": "envoy.common.key_value",
              "type_urls": [
                "envoy.extensions.key_value.file_based.v3.FileBasedKeyValueStoreConfig"
              ]
            },
            {
              "name": "envoy.config_subscription.ads",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.ads_collection",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.aggregated_grpc_collection",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.delta_grpc",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.delta_grpc_collection",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.filesystem",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.filesystem_collection",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.grpc",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.config_subscription.rest",
              "category": "envoy.config_subscription"
            },
            {
              "name": "envoy.route.early_data_policy.default",
              "category": "envoy.route.early_data_policy",
              "type_urls": [
                "envoy.extensions.early_data.v3.DefaultEarlyDataPolicy"
              ]
            },
            {
              "name": "default",
              "category": "network.connection.client"
            },
            {
              "name": "envoy_internal",
              "category": "network.connection.client"
            },
            {
              "name": "envoy.extensions.http.cache.file_system_http_cache",
              "category": "envoy.http.cache",
              "type_urls": [
                "envoy.extensions.http.cache.file_system_http_cache.v3.FileSystemHttpCacheConfig"
              ]
            },
            {
              "name": "envoy.extensions.http.cache.simple",
              "category": "envoy.http.cache",
              "type_urls": [
                "envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
              ]
            },
            {
              "name": "envoy.cluster.dns",
              "category": "envoy.clusters",
              "type_urls": ["envoy.extensions.clusters.dns.v3.DnsCluster"]
            },
            {
              "name": "envoy.cluster.eds",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.logical_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.original_dst",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.static",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.strict_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.aggregate",
              "category": "envoy.clusters",
              "type_urls": [
                "envoy.extensions.clusters.aggregate.v3.ClusterConfig"
              ]
            },
            {
              "name": "envoy.clusters.dynamic_forward_proxy",
              "category": "envoy.clusters",
              "type_urls": [
                "envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig"
              ]
            },
            {
              "name": "envoy.clusters.redis",
              "category": "envoy.clusters",
              "type_urls": [
                "envoy.extensions.clusters.redis.v3.RedisClusterConfig"
              ]
            },
            {
              "name": "envoy.wasm.runtime.null",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.wasm.runtime.v8",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.rbac.matchers.upstream_ip_port",
              "category": "envoy.rbac.matchers",
              "type_urls": [
                "envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher"
              ]
            },
            {
              "name": "envoy.tls.cert_validator.default",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.tls.cert_validator.spiffe",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.quic.connection_id_generator.quic_lb",
              "category": "envoy.quic.connection_id_generator",
              "type_urls": [
                "envoy.extensions.quic.connection_id_generator.quic_lb.v3.Config"
              ]
            },
            {
              "name": "envoy.quic.deterministic_connection_id_generator",
              "category": "envoy.quic.connection_id_generator",
              "type_urls": [
                "envoy.extensions.quic.connection_id_generator.v3.DeterministicConnectionIdGeneratorConfig"
              ]
            },
            {
              "name": "envoy.buffer",
              "category": "envoy.filters.http.upstream"
            },
            {
              "name": "envoy.ext_proc",
              "category": "envoy.filters.http.upstream"
            },
            {
              "name": "envoy.extensions.filters.http.dynamic_modules",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                "envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.admission_control",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.admission_control.v3.AdmissionControl"
              ]
            },
            {
              "name": "envoy.filters.http.aws_lambda",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.aws_lambda.v3.Config",
                "envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.aws_request_signing",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning",
                "envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigningPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.buffer",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.buffer.v3.Buffer",
                "envoy.extensions.filters.http.buffer.v3.BufferPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.composite",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.composite.v3.Composite"
              ]
            },
            {
              "name": "envoy.filters.http.credential_injector",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.credential_injector.v3.CredentialInjector"
              ]
            },
            {
              "name": "envoy.filters.http.ext_proc",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute",
                "envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              ]
            },
            {
              "name": "envoy.filters.http.header_mutation",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutation",
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.lua",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.lua.v3.Lua",
                "envoy.extensions.filters.http.lua.v3.LuaPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.match_delegate",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.common.matching.v3.ExtensionWithMatcher",
                "envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.upstream_codec",
              "category": "envoy.filters.http.upstream",
              "type_urls": [
                "envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec"
              ]
            },
            {
              "name": "envoy.filters.http.wasm",
              "category": "envoy.filters.http.upstream",
              "type_urls": ["envoy.extensions.filters.http.wasm.v3.Wasm"]
            },
            {
              "name": "envoy.filters.thrift.header_to_metadata",
              "category": "envoy.thrift_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.header_to_metadata.v3.HeaderToMetadata"
              ]
            },
            {
              "name": "envoy.filters.thrift.payload_to_metadata",
              "category": "envoy.thrift_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.payload_to_metadata.v3.PayloadToMetadata"
              ]
            },
            {
              "name": "envoy.filters.thrift.rate_limit",
              "category": "envoy.thrift_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.ratelimit.v3.RateLimit"
              ]
            },
            {
              "name": "envoy.filters.thrift.router",
              "category": "envoy.thrift_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.thrift_proxy.router.v3.Router"
              ]
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "framed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "header",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "unframed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "envoy.network.dns_resolver.cares",
              "category": "envoy.network.dns_resolver",
              "type_urls": [
                "envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig"
              ]
            },
            {
              "name": "envoy.network.dns_resolver.getaddrinfo",
              "category": "envoy.network.dns_resolver",
              "type_urls": [
                "envoy.extensions.network.dns_resolver.getaddrinfo.v3.GetAddrInfoDnsResolverConfig"
              ]
            },
            {
              "name": "envoy.filters.listener.http_inspector",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.http_inspector.v3.HttpInspector"
              ]
            },
            {
              "name": "envoy.filters.listener.local_ratelimit",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.listener.original_dst",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.original_dst.v3.OriginalDst"
              ]
            },
            {
              "name": "envoy.filters.listener.original_src",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.original_src.v3.OriginalSrc"
              ]
            },
            {
              "name": "envoy.filters.listener.proxy_protocol",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
              ]
            },
            {
              "name": "envoy.filters.listener.tls_inspector",
              "category": "envoy.filters.listener",
              "type_urls": [
                "envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
              ]
            },
            {
              "name": "envoy.listener.http_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_dst",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_src",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.proxy_protocol",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.tls_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.http.stateful_session.cookie",
              "category": "envoy.http.stateful_session",
              "type_urls": [
                "envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState"
              ]
            },
            {
              "name": "envoy.http.stateful_session.envelope",
              "category": "envoy.http.stateful_session",
              "type_urls": [
                "envoy.extensions.http.stateful_session.envelope.v3.EnvelopeSessionState"
              ]
            },
            {
              "name": "envoy.http.stateful_session.header",
              "category": "envoy.http.stateful_session",
              "type_urls": [
                "envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState"
              ]
            },
            {
              "name": "envoy.matching.inputs.application_protocol",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_ip",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_port",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.direct_source_ip",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.dns_san",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.filter_state",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.FilterStateInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.server_name",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_ip",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_port",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_type",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.subject",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.transport_protocol",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.uri_san",
              "category": "envoy.matching.network.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
              ]
            },
            {
              "name": "envoy.string_matcher.lua",
              "category": "envoy.string_matcher",
              "type_urls": ["envoy.extensions.string_matcher.lua.v3.Lua"]
            },
            {
              "name": "envoy.filters.udp.session.dynamic_forward_proxy",
              "category": "envoy.filters.udp.session",
              "type_urls": [
                "envoy.extensions.filters.udp.udp_proxy.session.dynamic_forward_proxy.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.udp.session.http_capsule",
              "category": "envoy.filters.udp.session",
              "type_urls": [
                "envoy.extensions.filters.udp.udp_proxy.session.http_capsule.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.resource_monitors.cgroup_memory",
              "category": "envoy.resource_monitors",
              "type_urls": [
                "envoy.extensions.resource_monitors.cgroup_memory.v3.CgroupMemoryConfig"
              ]
            },
            {
              "name": "envoy.resource_monitors.cpu_utilization",
              "category": "envoy.resource_monitors",
              "type_urls": [
                "envoy.extensions.resource_monitors.cpu_utilization.v3.CpuUtilizationConfig"
              ]
            },
            {
              "name": "envoy.resource_monitors.fixed_heap",
              "category": "envoy.resource_monitors",
              "type_urls": [
                "envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig"
              ]
            },
            {
              "name": "envoy.resource_monitors.injected_resource",
              "category": "envoy.resource_monitors",
              "type_urls": [
                "envoy.extensions.resource_monitors.injected_resource.v3.InjectedResourceConfig"
              ]
            },
            {
              "name": "envoy.path.match.uri_template.uri_template_matcher",
              "category": "envoy.path.match",
              "type_urls": [
                "envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig"
              ]
            },
            {
              "name": "envoy.echo",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.connection_limit",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit"
              ]
            },
            {
              "name": "envoy.filters.network.direct_response",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.direct_response.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.network.dubbo_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy"
              ]
            },
            {
              "name": "envoy.filters.network.echo",
              "category": "envoy.filters.network",
              "type_urls": ["envoy.extensions.filters.network.echo.v3.Echo"]
            },
            {
              "name": "envoy.filters.network.ext_authz",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.ext_authz.v3.ExtAuthz"
              ]
            },
            {
              "name": "envoy.filters.network.ext_proc",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.ext_proc.v3.NetworkExternalProcessor"
              ]
            },
            {
              "name": "envoy.filters.network.generic_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.v3.GenericProxy"
              ]
            },
            {
              "name": "envoy.filters.network.http_connection_manager",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              ]
            },
            {
              "name": "envoy.filters.network.local_ratelimit",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.network.mongo_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy"
              ]
            },
            {
              "name": "envoy.filters.network.ratelimit",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.ratelimit.v3.RateLimit"
              ]
            },
            {
              "name": "envoy.filters.network.rbac",
              "category": "envoy.filters.network",
              "type_urls": ["envoy.extensions.filters.network.rbac.v3.RBAC"]
            },
            {
              "name": "envoy.filters.network.redis_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.redis_proxy.v3.RedisProxy"
              ]
            },
            {
              "name": "envoy.filters.network.set_filter_state",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.set_filter_state.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.network.sni_cluster",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.sni_cluster.v3.SniCluster"
              ]
            },
            {
              "name": "envoy.filters.network.sni_dynamic_forward_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.network.tcp_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy"
              ]
            },
            {
              "name": "envoy.filters.network.thrift_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy"
              ]
            },
            {
              "name": "envoy.filters.network.wasm",
              "category": "envoy.filters.network",
              "type_urls": ["envoy.extensions.filters.network.wasm.v3.Wasm"]
            },
            {
              "name": "envoy.filters.network.zookeeper_proxy",
              "category": "envoy.filters.network",
              "type_urls": [
                "envoy.extensions.filters.network.zookeeper_proxy.v3.ZooKeeperProxy"
              ]
            },
            {
              "name": "envoy.http_connection_manager",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.mongo_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ratelimit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.redis_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.tcp_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.formatter.cel",
              "category": "envoy.formatter",
              "type_urls": ["envoy.extensions.formatter.cel.v3.Cel"]
            },
            {
              "name": "envoy.formatter.metadata",
              "category": "envoy.formatter",
              "type_urls": ["envoy.extensions.formatter.metadata.v3.Metadata"]
            },
            {
              "name": "envoy.formatter.req_without_query",
              "category": "envoy.formatter",
              "type_urls": [
                "envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery"
              ]
            },
            {
              "name": "envoy.http.early_header_mutation.header_mutation",
              "category": "envoy.http.early_header_mutation",
              "type_urls": [
                "envoy.extensions.http.early_header_mutation.header_mutation.v3.HeaderMutation"
              ]
            },
            {
              "name": "envoy.filters.connection_pools.tcp.generic",
              "category": "envoy.upstreams",
              "type_urls": [
                "envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto"
              ]
            },
            {
              "name": "envoy.regex_engines.google_re2",
              "category": "envoy.regex_engines",
              "type_urls": ["envoy.extensions.regex_engines.v3.GoogleRE2"]
            },
            {
              "name": "dubbo",
              "category": "envoy.dubbo_proxy.protocols"
            },
            {
              "name": "envoy.health_check.event_sink.file",
              "category": "envoy.health_check.event_sinks",
              "type_urls": [
                "envoy.extensions.health_check.event_sinks.file.v3.HealthCheckEventFileSink"
              ]
            },
            {
              "name": "envoy.srds_factory.default",
              "category": "envoy.srds_factory"
            },
            {
              "name": "envoy.matching.custom_matchers.domain_matcher",
              "category": "envoy.matching.http.custom_matchers",
              "type_urls": ["xds.type.matcher.v3.ServerNameMatcher"]
            },
            {
              "name": "envoy.matching.custom_matchers.trie_matcher",
              "category": "envoy.matching.http.custom_matchers",
              "type_urls": ["xds.type.matcher.v3.IPMatcher"]
            },
            {
              "name": "envoy.config.validators.minimum_clusters",
              "category": "envoy.config.validators"
            },
            {
              "name": "envoy.config.validators.minimum_clusters_validator",
              "category": "envoy.config.validators",
              "type_urls": [
                "envoy.extensions.config.validators.minimum_clusters.v3.MinimumClustersValidator"
              ]
            },
            {
              "name": "envoy.access_loggers.file",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.file.v3.FileAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.fluentd",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.fluentd.v3.FluentdAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.http_grpc",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.open_telemetry",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.stderr",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.stream.v3.StderrAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.stdout",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.tcp_grpc",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.wasm",
              "category": "envoy.access_loggers",
              "type_urls": [
                "envoy.extensions.access_loggers.wasm.v3.WasmAccessLog"
              ]
            },
            {
              "name": "envoy.file_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.fluentd_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.http_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.open_telemetry_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stderr_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stdout_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.tcp_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.wasm_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.load_balancing_policies.client_side_weighted_round_robin",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.client_side_weighted_round_robin.v3.ClientSideWeightedRoundRobin"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.cluster_provided",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.cluster_provided.v3.ClusterProvided"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.least_request",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.maglev",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.maglev.v3.Maglev"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.override_host",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.override_host.v3.OverrideHost"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.random",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.random.v3.Random"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.ring_hash",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.ring_hash.v3.RingHash"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.round_robin",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.subset",
              "category": "envoy.load_balancing_policies",
              "type_urls": [
                "envoy.extensions.load_balancing_policies.subset.v3.Subset"
              ]
            },
            {
              "name": "envoy.filters.listener.original_dst.local_ip",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.filters.listener.original_dst.remote_ip",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.network.application_protocols",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.network.ip",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.network.transport_socket.original_dst_address",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.network.upstream_server_name",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.network.upstream_subject_alt_names",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.ratelimit.hits_addend",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.router.debug_config",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.string",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.tcp_proxy.cluster",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.tcp_proxy.disable_tunneling",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.tcp_proxy.per_connection_idle_timeout_ms",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.upstream.dynamic_host",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.upstream.dynamic_port",
              "category": "filter_state.object"
            },
            {
              "name": "envoy.tracers.opentelemetry.resource_detectors.dynatrace",
              "category": "envoy.tracers.opentelemetry.resource_detectors",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.resource_detectors.v3.DynatraceResourceDetectorConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.resource_detectors.environment",
              "category": "envoy.tracers.opentelemetry.resource_detectors",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.resource_detectors.v3.EnvironmentResourceDetectorConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry.resource_detectors.static_config",
              "category": "envoy.tracers.opentelemetry.resource_detectors",
              "type_urls": [
                "envoy.extensions.tracers.opentelemetry.resource_detectors.v3.StaticConfigResourceDetectorConfig"
              ]
            },
            {
              "name": "envoy.matching.inputs.cel_data_input",
              "category": "envoy.matching.http.input",
              "type_urls": ["xds.type.matcher.v3.HttpAttributesCelMatchInput"]
            },
            {
              "name": "envoy.matching.inputs.destination_ip",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_port",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.direct_source_ip",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.dns_san",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.dynamic_metadata",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.DynamicMetadataInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.filter_state",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.FilterStateInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.request_headers",
              "category": "envoy.matching.http.input",
              "type_urls": ["envoy.type.matcher.v3.HttpRequestHeaderMatchInput"]
            },
            {
              "name": "envoy.matching.inputs.request_trailers",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpRequestTrailerMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.response_headers",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpResponseHeaderMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.response_trailers",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpResponseTrailerMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.server_name",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_ip",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_port",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_type",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.status_code_class_input",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpResponseStatusCodeClassMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.status_code_input",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.subject",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.uri_san",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
              ]
            },
            {
              "name": "query_params",
              "category": "envoy.matching.http.input",
              "type_urls": [
                "envoy.type.matcher.v3.HttpRequestQueryParamMatchInput"
              ]
            },
            {
              "name": "envoy.extensions.http.custom_response.local_response_policy",
              "category": "envoy.http.custom_response",
              "type_urls": [
                "envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy"
              ]
            },
            {
              "name": "envoy.extensions.http.custom_response.redirect_policy",
              "category": "envoy.http.custom_response",
              "type_urls": [
                "envoy.extensions.http.custom_response.redirect_policy.v3.RedirectPolicy"
              ]
            },
            {
              "name": "quic.server_preferred_address.datasource",
              "category": "envoy.quic.server_preferred_address",
              "type_urls": [
                "envoy.extensions.quic.server_preferred_address.v3.DataSourceServerPreferredAddressConfig"
              ]
            },
            {
              "name": "quic.server_preferred_address.fixed",
              "category": "envoy.quic.server_preferred_address",
              "type_urls": [
                "envoy.extensions.quic.server_preferred_address.v3.FixedServerPreferredAddressConfig"
              ]
            },
            {
              "name": "envoy.matching.input_matchers.generic_request_matcher",
              "category": "envoy.matching.input_matchers",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.matcher.v3.RequestMatcher"
              ]
            },
            {
              "name": "envoy.matching.matchers.cel_matcher",
              "category": "envoy.matching.input_matchers",
              "type_urls": ["xds.type.matcher.v3.CelMatcher"]
            },
            {
              "name": "envoy.matching.matchers.consistent_hashing",
              "category": "envoy.matching.input_matchers",
              "type_urls": [
                "envoy.extensions.matching.input_matchers.consistent_hashing.v3.ConsistentHashing"
              ]
            },
            {
              "name": "envoy.matching.matchers.ip",
              "category": "envoy.matching.input_matchers",
              "type_urls": ["envoy.extensions.matching.input_matchers.ip.v3.Ip"]
            },
            {
              "name": "envoy.matching.matchers.metadata_matcher",
              "category": "envoy.matching.input_matchers",
              "type_urls": [
                "envoy.extensions.matching.input_matchers.metadata.v3.Metadata"
              ]
            },
            {
              "name": "envoy.matching.matchers.runtime_fraction",
              "category": "envoy.matching.input_matchers",
              "type_urls": [
                "envoy.extensions.matching.input_matchers.runtime_fraction.v3.RuntimeFraction"
              ]
            },
            {
              "name": "envoy.tracers.datadog",
              "category": "envoy.tracers",
              "type_urls": ["envoy.config.trace.v3.DatadogConfig"]
            },
            {
              "name": "envoy.tracers.fluentd",
              "category": "envoy.tracers",
              "type_urls": ["envoy.extensions.tracers.fluentd.v3.FluentdConfig"]
            },
            {
              "name": "envoy.tracers.opentelemetry",
              "category": "envoy.tracers",
              "type_urls": ["envoy.config.trace.v3.OpenTelemetryConfig"]
            },
            {
              "name": "envoy.tracers.skywalking",
              "category": "envoy.tracers",
              "type_urls": ["envoy.config.trace.v3.SkyWalkingConfig"]
            },
            {
              "name": "envoy.tracers.xray",
              "category": "envoy.tracers",
              "type_urls": ["envoy.config.trace.v3.XRayConfig"]
            },
            {
              "name": "envoy.tracers.zipkin",
              "category": "envoy.tracers",
              "type_urls": ["envoy.config.trace.v3.ZipkinConfig"]
            },
            {
              "name": "envoy.zipkin",
              "category": "envoy.tracers"
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary/non-strict",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "compact",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "twitter",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "envoy.http.original_ip_detection.custom_header",
              "category": "envoy.http.original_ip_detection",
              "type_urls": [
                "envoy.extensions.http.original_ip_detection.custom_header.v3.CustomHeaderConfig"
              ]
            },
            {
              "name": "envoy.http.original_ip_detection.xff",
              "category": "envoy.http.original_ip_detection",
              "type_urls": [
                "envoy.extensions.http.original_ip_detection.xff.v3.XffConfig"
              ]
            },
            {
              "name": "envoy.filters.udp.dns_filter",
              "category": "envoy.filters.udp_listener",
              "type_urls": [
                "envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.udp_listener.udp_proxy",
              "category": "envoy.filters.udp_listener",
              "type_urls": [
                "envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig"
              ]
            },
            {
              "name": "envoy.grpc_credentials.default",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.grpc_credentials.file_based_metadata",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.filters.generic.router",
              "category": "envoy.generic_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.router.v3.Router"
              ]
            },
            {
              "name": "envoy.connection_handler.default",
              "category": "envoy.connection_handler"
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": ["envoy.extensions.transport_sockets.alts.v3.Alts"]
            },
            {
              "name": "envoy.transport_sockets.http_11_proxy",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.http_11_proxy.v3.Http11ProxyUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.internal_upstream",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
              ]
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig"
              ]
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": ["envoy.extensions.transport_sockets.tap.v3.Tap"]
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.tcp_stats.v3.Config"
              ]
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
              ]
            },
            {
              "name": "envoy.transport_sockets.upstream_proxy_protocol",
              "category": "envoy.transport_sockets.upstream",
              "type_urls": [
                "envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport"
              ]
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.router.cluster_specifier_plugin.lua",
              "category": "envoy.router.cluster_specifier_plugin",
              "type_urls": [
                "envoy.extensions.router.cluster_specifiers.lua.v3.LuaConfig"
              ]
            },
            {
              "name": "envoy.router.cluster_specifier_plugin.matcher",
              "category": "envoy.router.cluster_specifier_plugin",
              "type_urls": [
                "envoy.extensions.router.cluster_specifiers.matcher.v3.MatcherClusterSpecifier"
              ]
            },
            {
              "name": "envoy.retry_priorities.previous_priorities",
              "category": "envoy.retry_priorities",
              "type_urls": [
                "envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig"
              ]
            },
            {
              "name": "envoy.udp_packet_writer.default",
              "category": "envoy.udp_packet_writer",
              "type_urls": [
                "envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory"
              ]
            },
            {
              "name": "envoy.udp_packet_writer.gso",
              "category": "envoy.udp_packet_writer",
              "type_urls": [
                "envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory"
              ]
            },
            {
              "name": "envoy.geoip_providers.maxmind",
              "category": "envoy.geoip_providers",
              "type_urls": [
                "envoy.extensions.geoip_providers.maxmind.v3.MaxMindConfig"
              ]
            },
            {
              "name": "envoy.path.rewrite.uri_template.uri_template_rewriter",
              "category": "envoy.path.rewrite",
              "type_urls": [
                "envoy.extensions.path.rewrite.uri_template.v3.UriTemplateRewriteConfig"
              ]
            },
            {
              "name": "envoy.filters.dubbo.router",
              "category": "envoy.dubbo_proxy.filters",
              "type_urls": [
                "envoy.extensions.filters.network.dubbo_proxy.router.v3.Router"
              ]
            },
            {
              "name": "envoy.internal_redirect_predicates.allow_listed_routes",
              "category": "envoy.internal_redirect_predicates",
              "type_urls": [
                "envoy.extensions.internal_redirect.allow_listed_routes.v3.AllowListedRoutesConfig"
              ]
            },
            {
              "name": "envoy.internal_redirect_predicates.previous_routes",
              "category": "envoy.internal_redirect_predicates",
              "type_urls": [
                "envoy.extensions.internal_redirect.previous_routes.v3.PreviousRoutesConfig"
              ]
            },
            {
              "name": "envoy.internal_redirect_predicates.safe_cross_scheme",
              "category": "envoy.internal_redirect_predicates",
              "type_urls": [
                "envoy.extensions.internal_redirect.safe_cross_scheme.v3.SafeCrossSchemeConfig"
              ]
            },
            {
              "name": "envoy.watchdog.abort_action",
              "category": "envoy.guarddog_actions",
              "type_urls": ["envoy.watchdog.v3.AbortActionConfig"]
            },
            {
              "name": "envoy.watchdog.profile_action",
              "category": "envoy.guarddog_actions",
              "type_urls": [
                "envoy.extensions.watchdog.profile_action.v3.ProfileActionConfig"
              ]
            },
            {
              "name": "envoy.rate_limit_descriptors.expr",
              "category": "envoy.rate_limit_descriptors",
              "type_urls": [
                "envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor"
              ]
            },
            {
              "name": "envoy.built_in_formatters.cel",
              "category": "envoy.built_in_formatters"
            },
            {
              "name": "envoy.built_in_formatters.http.default",
              "category": "envoy.built_in_formatters"
            },
            {
              "name": "envoy.built_in_formatters.metadata",
              "category": "envoy.built_in_formatters"
            },
            {
              "name": "envoy.built_in_formatters.stream_info.default",
              "category": "envoy.built_in_formatters"
            },
            {
              "name": "envoy.generic_proxy.codecs.dubbo",
              "category": "envoy.generic_proxy.codecs",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.codecs.dubbo.v3.DubboCodecConfig"
              ]
            },
            {
              "name": "envoy.generic_proxy.codecs.http1",
              "category": "envoy.generic_proxy.codecs",
              "type_urls": [
                "envoy.extensions.filters.network.generic_proxy.codecs.http1.v3.Http1CodecConfig"
              ]
            },
            {
              "name": "envoy.upstream.local_address_selector.default_local_address_selector",
              "category": "envoy.upstream.local_address_selector",
              "type_urls": [
                "envoy.config.upstream.local_address_selector.v3.DefaultLocalAddressSelector"
              ]
            },
            {
              "name": "envoy.matching.custom_matchers.domain_matcher",
              "category": "envoy.matching.network.custom_matchers",
              "type_urls": ["xds.type.matcher.v3.ServerNameMatcher"]
            },
            {
              "name": "envoy.matching.custom_matchers.trie_matcher",
              "category": "envoy.matching.network.custom_matchers",
              "type_urls": ["xds.type.matcher.v3.IPMatcher"]
            },
            {
              "name": "envoy.http.stateful_header_formatters.preserve_case",
              "category": "envoy.http.stateful_header_formatters",
              "type_urls": [
                "envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig"
              ]
            },
            {
              "name": "preserve_case",
              "category": "envoy.http.stateful_header_formatters"
            },
            {
              "name": "envoy.quic.proof_source.filter_chain",
              "category": "envoy.quic.proof_source",
              "type_urls": [
                "envoy.extensions.quic.proof_source.v3.ProofSourceConfig"
              ]
            },
            {
              "name": "envoy.compression.brotli.compressor",
              "category": "envoy.compression.compressor",
              "type_urls": [
                "envoy.extensions.compression.brotli.compressor.v3.Brotli"
              ]
            },
            {
              "name": "envoy.compression.gzip.compressor",
              "category": "envoy.compression.compressor",
              "type_urls": [
                "envoy.extensions.compression.gzip.compressor.v3.Gzip"
              ]
            },
            {
              "name": "envoy.compression.zstd.compressor",
              "category": "envoy.compression.compressor",
              "type_urls": [
                "envoy.extensions.compression.zstd.compressor.v3.Zstd"
              ]
            },
            {
              "name": "envoy.ssl.server_context_factory.default",
              "category": "envoy.ssl.server_context_factory"
            },
            {
              "name": "envoy.health_checkers.grpc",
              "category": "envoy.health_checkers",
              "type_urls": ["envoy.config.core.v3.HealthCheck.GrpcHealthCheck"]
            },
            {
              "name": "envoy.health_checkers.http",
              "category": "envoy.health_checkers",
              "type_urls": ["envoy.config.core.v3.HealthCheck.HttpHealthCheck"]
            },
            {
              "name": "envoy.health_checkers.redis",
              "category": "envoy.health_checkers",
              "type_urls": ["envoy.extensions.health_checkers.redis.v3.Redis"]
            },
            {
              "name": "envoy.health_checkers.tcp",
              "category": "envoy.health_checkers",
              "type_urls": ["envoy.config.core.v3.HealthCheck.TcpHealthCheck"]
            },
            {
              "name": "envoy.health_checkers.thrift",
              "category": "envoy.health_checkers",
              "type_urls": ["envoy.extensions.health_checkers.thrift.v3.Thrift"]
            },
            {
              "name": "envoy.quic.crypto_stream.server.quiche",
              "category": "envoy.quic.server.crypto_stream",
              "type_urls": [
                "envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig"
              ]
            },
            {
              "name": "envoy.request_id.uuid",
              "category": "envoy.request_id",
              "type_urls": [
                "envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig"
              ]
            },
            {
              "name": "envoy.http.header_validators.envoy_default",
              "category": "envoy.http.header_validators",
              "type_urls": [
                "envoy.extensions.http.header_validators.envoy_default.v3.HeaderValidatorConfig"
              ]
            },
            {
              "name": "envoy.http.injected_credentials.generic",
              "category": "envoy.http.injected_credentials",
              "type_urls": [
                "envoy.extensions.http.injected_credentials.generic.v3.Generic"
              ]
            },
            {
              "name": "envoy.http.injected_credentials.oauth2",
              "category": "envoy.http.injected_credentials",
              "type_urls": [
                "envoy.extensions.http.injected_credentials.oauth2.v3.OAuth2"
              ]
            },
            {
              "name": "envoy.matching.actions.format_string",
              "category": "envoy.matching.action",
              "type_urls": ["envoy.config.core.v3.SubstitutionFormatString"]
            },
            {
              "name": "filter-chain-name",
              "category": "envoy.matching.action",
              "type_urls": ["google.protobuf.StringValue"]
            },
            {
              "name": "envoy.quic.connection_debug_visitor.basic",
              "category": "envoy.quic.connection_debug_visitor",
              "type_urls": [
                "envoy.extensions.quic.connection_debug_visitor.v3.BasicConfig"
              ]
            },
            {
              "name": "envoy.quic.connection_debug_visitor.quic_stats",
              "category": "envoy.quic.connection_debug_visitor",
              "type_urls": [
                "envoy.extensions.quic.connection_debug_visitor.quic_stats.v3.Config"
              ]
            },
            {
              "name": "envoy.extensions.http.ext_proc.save_processing_response",
              "category": "envoy.http.ext_proc.response_processors",
              "type_urls": [
                "envoy.extensions.http.ext_proc.response_processors.save_processing_response.v3.SaveProcessingResponse"
              ]
            },
            {
              "name": "envoy.rbac.principals.mtls_authenticated",
              "category": "envoy.rbac.principals",
              "type_urls": [
                "envoy.extensions.rbac.principals.mtls_authenticated.v3.Config"
              ]
            },
            {
              "name": "envoy.ip",
              "category": "envoy.resolvers"
            }
          ]
        },
        "static_resources": {
          "listeners": [
            {
              "name": "envoy-gateway-proxy-stats-0.0.0.0-19001",
              "address": {
                "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 19001
                }
              },
              "filter_chains": [
                {
                  "filters": [
                    {
                      "name": "envoy.filters.network.http_connection_manager",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "stat_prefix": "eg-stats-http",
                        "route_config": {
                          "name": "local_route",
                          "virtual_hosts": [
                            {
                              "name": "prometheus_stats",
                              "domains": ["*"],
                              "routes": [
                                {
                                  "match": {
                                    "path": "/stats/prometheus",
                                    "headers": [
                                      {
                                        "name": ":method",
                                        "string_match": {
                                          "exact": "GET"
                                        }
                                      }
                                    ]
                                  },
                                  "route": {
                                    "cluster": "prometheus_stats"
                                  }
                                }
                              ]
                            }
                          ]
                        },
                        "http_filters": [
                          {
                            "name": "envoy.filters.http.router",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                            }
                          }
                        ],
                        "normalize_path": true
                      }
                    }
                  ]
                }
              ],
              "bypass_overload_manager": true
            }
          ],
          "clusters": [
            {
              "name": "prometheus_stats",
              "type": "STATIC",
              "connect_timeout": "0.250s",
              "load_assignment": {
                "cluster_name": "prometheus_stats",
                "endpoints": [
                  {
                    "lb_endpoints": [
                      {
                        "endpoint": {
                          "address": {
                            "socket_address": {
                              "address": "127.0.0.1",
                              "port_value": 19000
                            }
                          }
                        }
                      }
                    ]
                  }
                ]
              }
            },
            {
              "name": "default/eg",
              "type": "EDS",
              "eds_cluster_config": {
                "eds_config": {
                  "ads": {},
                  "resource_api_version": "V3"
                },
                "service_name": "default/eg"
              },
              "connect_timeout": "10s",
              "load_balancing_policy": {
                "policies": [
                  {
                    "typed_extension_config": {
                      "name": "envoy.load_balancing_policies.least_request",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest",
                        "locality_lb_config": {
                          "zone_aware_lb_config": {
                            "min_cluster_size": "1"
                          }
                        }
                      }
                    }
                  }
                ]
              }
            },
            {
              "name": "xds_cluster",
              "type": "STRICT_DNS",
              "connect_timeout": "10s",
              "transport_socket": {
                "name": "envoy.transport_sockets.tls",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                  "common_tls_context": {
                    "tls_params": {
                      "tls_maximum_protocol_version": "TLSv1_3"
                    },
                    "tls_certificate_sds_secret_configs": [
                      {
                        "name": "xds_certificate",
                        "sds_config": {
                          "resource_api_version": "V3",
                          "path_config_source": {
                            "path": "/sds/xds-certificate.json"
                          }
                        }
                      }
                    ],
                    "validation_context_sds_secret_config": {
                      "name": "xds_trusted_ca",
                      "sds_config": {
                        "resource_api_version": "V3",
                        "path_config_source": {
                          "path": "/sds/xds-trusted-ca.json"
                        }
                      }
                    }
                  }
                }
              },
              "load_assignment": {
                "cluster_name": "xds_cluster",
                "endpoints": [
                  {
                    "lb_endpoints": [
                      {
                        "endpoint": {
                          "address": {
                            "socket_address": {
                              "address": "envoy-gateway.envoy-gateway-system.svc.cluster.local.",
                              "port_value": 18000
                            }
                          }
                        },
                        "load_balancing_weight": 1
                      }
                    ],
                    "load_balancing_weight": 1
                  }
                ]
              },
              "typed_extension_protocol_options": {
                "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                  "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                  "explicit_http_config": {
                    "http2_protocol_options": {
                      "connection_keepalive": {
                        "interval": "30s",
                        "timeout": "5s"
                      }
                    }
                  }
                }
              }
            }
          ]
        },
        "dynamic_resources": {
          "lds_config": {
            "ads": {},
            "resource_api_version": "V3"
          },
          "cds_config": {
            "ads": {},
            "resource_api_version": "V3"
          },
          "ads_config": {
            "api_type": "DELTA_GRPC",
            "grpc_services": [
              {
                "envoy_grpc": {
                  "cluster_name": "xds_cluster"
                }
              }
            ],
            "set_node_on_first_message_only": true,
            "transport_api_version": "V3"
          }
        },
        "cluster_manager": {
          "local_cluster_name": "default/eg"
        },
        "admin": {
          "address": {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 19000
            }
          },
          "access_log": [
            {
              "name": "envoy.access_loggers.file",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                "path": "/dev/null"
              }
            }
          ]
        },
        "overload_manager": {
          "refresh_interval": "0.250s",
          "resource_monitors": [
            {
              "name": "envoy.resource_monitors.global_downstream_max_connections",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig",
                "max_active_downstream_connections": "50000"
              }
            }
          ]
        },
        "layered_runtime": {
          "layers": [
            {
              "name": "global_config",
              "static_layer": {
                "envoy.restart_features.use_eds_cache_for_ads": true,
                "re2.max_program_size.warn_level": 1000,
                "re2.max_program_size.error_level": "4294967295"
              }
            }
          ]
        }
      },
      "last_updated": "2025-10-09T04:27:24.355Z"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
      "version_info": "32",
      "static_clusters": [
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "default/eg",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "resource_api_version": "V3"
              },
              "service_name": "default/eg"
            },
            "connect_timeout": "10s",
            "load_balancing_policy": {
              "policies": [
                {
                  "typed_extension_config": {
                    "name": "envoy.load_balancing_policies.least_request",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest",
                      "locality_lb_config": {
                        "zone_aware_lb_config": {
                          "min_cluster_size": "1"
                        }
                      }
                    }
                  }
                }
              ]
            }
          },
          "last_updated": "2025-10-09T04:27:24.365Z"
        },
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "prometheus_stats",
            "type": "STATIC",
            "connect_timeout": "0.250s",
            "load_assignment": {
              "cluster_name": "prometheus_stats",
              "endpoints": [
                {
                  "lb_endpoints": [
                    {
                      "endpoint": {
                        "address": {
                          "socket_address": {
                            "address": "127.0.0.1",
                            "port_value": 19000
                          }
                        }
                      }
                    }
                  ]
                }
              ]
            }
          },
          "last_updated": "2025-10-09T04:27:24.364Z"
        },
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "xds_cluster",
            "type": "STRICT_DNS",
            "connect_timeout": "10s",
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "common_tls_context": {
                  "tls_params": {
                    "tls_maximum_protocol_version": "TLSv1_3"
                  },
                  "tls_certificate_sds_secret_configs": [
                    {
                      "name": "xds_certificate",
                      "sds_config": {
                        "resource_api_version": "V3",
                        "path_config_source": {
                          "path": "/sds/xds-certificate.json"
                        }
                      }
                    }
                  ],
                  "validation_context_sds_secret_config": {
                    "name": "xds_trusted_ca",
                    "sds_config": {
                      "resource_api_version": "V3",
                      "path_config_source": {
                        "path": "/sds/xds-trusted-ca.json"
                      }
                    }
                  }
                }
              }
            },
            "load_assignment": {
              "cluster_name": "xds_cluster",
              "endpoints": [
                {
                  "lb_endpoints": [
                    {
                      "endpoint": {
                        "address": {
                          "socket_address": {
                            "address": "envoy-gateway.envoy-gateway-system.svc.cluster.local.",
                            "port_value": 18000
                          }
                        }
                      },
                      "load_balancing_weight": 1
                    }
                  ],
                  "load_balancing_weight": 1
                }
              ]
            },
            "typed_extension_protocol_options": {
              "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                "explicit_http_config": {
                  "http2_protocol_options": {
                    "connection_keepalive": {
                      "interval": "30s",
                      "timeout": "5s"
                    }
                  }
                }
              }
            }
          },
          "last_updated": "2025-10-09T04:27:24.364Z"
        }
      ],
      "dynamic_active_clusters": [
        {
          "version_info": "a213ca16b3c7256ea3504f356946d588e02ad8fab519f8026d1312f2262b9674",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "httproute/default/backend/rule/0",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "resource_api_version": "V3"
              },
              "service_name": "httproute/default/backend/rule/0"
            },
            "connect_timeout": "10s",
            "per_connection_buffer_limit_bytes": 32768,
            "lb_policy": "LEAST_REQUEST",
            "circuit_breakers": {
              "thresholds": [
                {
                  "max_retries": 1024
                }
              ]
            },
            "dns_lookup_family": "V4_ONLY",
            "metadata": {
              "filter_metadata": {
                "envoy-gateway": {
                  "resources": [
                    {
                      "name": "backend",
                      "namespace": "default",
                      "kind": "HTTPRoute"
                    }
                  ]
                }
              }
            },
            "common_lb_config": {},
            "ignore_health_on_host_removal": true,
            "load_balancing_policy": {
              "policies": [
                {
                  "typed_extension_config": {
                    "name": "envoy.load_balancing_policies.least_request",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest",
                      "locality_lb_config": {
                        "locality_weighted_lb_config": {}
                      }
                    }
                  }
                }
              ]
            },
            "transport_socket_matches": [
              {
                "name": "httproute/default/backend/rule/0/tls/0",
                "match": {
                  "name": "httproute/default/backend/rule/0/tls/0"
                },
                "transport_socket": {
                  "name": "envoy.transport_sockets.tls",
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                    "common_tls_context": {
                      "combined_validation_context": {
                        "default_validation_context": {
                          "match_typed_subject_alt_names": [
                            {
                              "san_type": "DNS",
                              "matcher": {
                                "exact": "www.example.com"
                              }
                            }
                          ]
                        },
                        "validation_context_sds_secret_config": {
                          "name": "enable-backend-tls/default-ca",
                          "sds_config": {
                            "ads": {},
                            "resource_api_version": "V3"
                          }
                        }
                      }
                    },
                    "sni": "www.example.com"
                  }
                }
              }
            ]
          },
          "last_updated": "2025-10-09T05:03:24.781Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "version_info": "14",
      "static_listeners": [
        {
          "listener": {
            "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
            "name": "envoy-gateway-proxy-stats-0.0.0.0-19001",
            "address": {
              "socket_address": {
                "address": "0.0.0.0",
                "port_value": 19001
              }
            },
            "filter_chains": [
              {
                "filters": [
                  {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                      "stat_prefix": "eg-stats-http",
                      "route_config": {
                        "name": "local_route",
                        "virtual_hosts": [
                          {
                            "name": "prometheus_stats",
                            "domains": ["*"],
                            "routes": [
                              {
                                "match": {
                                  "path": "/stats/prometheus",
                                  "headers": [
                                    {
                                      "name": ":method",
                                      "string_match": {
                                        "exact": "GET"
                                      }
                                    }
                                  ]
                                },
                                "route": {
                                  "cluster": "prometheus_stats"
                                }
                              }
                            ]
                          }
                        ]
                      },
                      "http_filters": [
                        {
                          "name": "envoy.filters.http.router",
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                          }
                        }
                      ],
                      "normalize_path": true
                    }
                  }
                ]
              }
            ],
            "bypass_overload_manager": true
          },
          "last_updated": "2025-10-09T04:27:24.367Z"
        }
      ],
      "dynamic_listeners": [
        {
          "name": "envoy-gateway-proxy-ready-0.0.0.0-19003",
          "active_state": {
            "version_info": "480eb87881317ebff21162f54e4a9c59c648d67a93fb17232e909ed08547e473",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "name": "envoy-gateway-proxy-ready-0.0.0.0-19003",
              "address": {
                "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 19003
                }
              },
              "filter_chains": [
                {
                  "filters": [
                    {
                      "name": "envoy.filters.network.http_connection_manager",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "stat_prefix": "eg-ready-http",
                        "route_config": {
                          "name": "ready_route",
                          "virtual_hosts": [
                            {
                              "name": "ready_route",
                              "domains": ["*"],
                              "routes": [
                                {
                                  "match": {
                                    "prefix": "/"
                                  },
                                  "direct_response": {
                                    "status": 500
                                  }
                                }
                              ]
                            }
                          ]
                        },
                        "http_filters": [
                          {
                            "name": "envoy.filters.http.health_check",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck",
                              "pass_through_mode": false,
                              "headers": [
                                {
                                  "name": ":path",
                                  "string_match": {
                                    "exact": "/ready"
                                  }
                                }
                              ]
                            }
                          },
                          {
                            "name": "envoy.filters.http.router",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                              "suppress_envoy_headers": true
                            }
                          }
                        ]
                      }
                    }
                  ]
                }
              ],
              "bypass_overload_manager": true
            },
            "last_updated": "2025-10-09T04:27:24.393Z"
          }
        },
        {
          "name": "default/eg/http",
          "active_state": {
            "version_info": "6c120184248901e0afc05f493d1b00699bc9d90108b76d5289eb213ef4b5706a",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "name": "default/eg/http",
              "address": {
                "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 10080
                }
              },
              "per_connection_buffer_limit_bytes": 32768,
              "access_log": [
                {
                  "name": "envoy.access_loggers.file",
                  "filter": {
                    "response_flag_filter": {
                      "flags": ["NR"]
                    }
                  },
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                    "path": "/dev/stdout",
                    "log_format": {
                      "json_format": {
                        "upstream_host": "%UPSTREAM_HOST%",
                        "bytes_sent": "%BYTES_SENT%",
                        "user-agent": "%REQ(USER-AGENT)%",
                        "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                        "method": "%REQ(:METHOD)%",
                        "downstream_local_address": "%DOWNSTREAM_LOCAL_ADDRESS%",
                        "response_code_details": "%RESPONSE_CODE_DETAILS%",
                        "x-envoy-upstream-service-time": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                        "protocol": "%PROTOCOL%",
                        "duration": "%DURATION%",
                        "downstream_remote_address": "%DOWNSTREAM_REMOTE_ADDRESS%",
                        "route_name": "%ROUTE_NAME%",
                        "start_time": "%START_TIME%",
                        "bytes_received": "%BYTES_RECEIVED%",
                        "response_flags": "%RESPONSE_FLAGS%",
                        ":authority": "%REQ(:AUTHORITY)%",
                        "upstream_cluster": "%UPSTREAM_CLUSTER%",
                        "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                        "upstream_transport_failure_reason": "%UPSTREAM_TRANSPORT_FAILURE_REASON%",
                        "requested_server_name": "%REQUESTED_SERVER_NAME%",
                        "x-forwarded-for": "%REQ(X-FORWARDED-FOR)%",
                        "x-request-id": "%REQ(X-REQUEST-ID)%",
                        "x-envoy-origin-path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                        "response_code": "%RESPONSE_CODE%"
                      }
                    }
                  }
                }
              ],
              "default_filter_chain": {
                "filters": [
                  {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                      "stat_prefix": "http-10080",
                      "rds": {
                        "config_source": {
                          "ads": {},
                          "resource_api_version": "V3"
                        },
                        "route_config_name": "default/eg/http"
                      },
                      "http_filters": [
                        {
                          "name": "envoy.filters.http.router",
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                            "suppress_envoy_headers": true
                          }
                        }
                      ],
                      "http2_protocol_options": {
                        "max_concurrent_streams": 100,
                        "initial_stream_window_size": 65536,
                        "initial_connection_window_size": 1048576
                      },
                      "access_log": [
                        {
                          "name": "envoy.access_loggers.file",
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                            "path": "/dev/stdout",
                            "log_format": {
                              "json_format": {
                                "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%",
                                "protocol": "%PROTOCOL%",
                                "start_time": "%START_TIME%",
                                "x-envoy-origin-path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                                "x-envoy-upstream-service-time": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                                "bytes_sent": "%BYTES_SENT%",
                                "method": "%REQ(:METHOD)%",
                                "downstream_remote_address": "%DOWNSTREAM_REMOTE_ADDRESS%",
                                "bytes_received": "%BYTES_RECEIVED%",
                                "response_code_details": "%RESPONSE_CODE_DETAILS%",
                                "upstream_host": "%UPSTREAM_HOST%",
                                "upstream_cluster": "%UPSTREAM_CLUSTER%",
                                "x-request-id": "%REQ(X-REQUEST-ID)%",
                                "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                                "route_name": "%ROUTE_NAME%",
                                "requested_server_name": "%REQUESTED_SERVER_NAME%",
                                "user-agent": "%REQ(USER-AGENT)%",
                                "duration": "%DURATION%",
                                "downstream_local_address": "%DOWNSTREAM_LOCAL_ADDRESS%",
                                "response_code": "%RESPONSE_CODE%",
                                "upstream_transport_failure_reason": "%UPSTREAM_TRANSPORT_FAILURE_REASON%",
                                "response_flags": "%RESPONSE_FLAGS%",
                                "x-forwarded-for": "%REQ(X-FORWARDED-FOR)%",
                                ":authority": "%REQ(:AUTHORITY)%"
                              }
                            }
                          }
                        }
                      ],
                      "use_remote_address": true,
                      "normalize_path": true,
                      "merge_slashes": true,
                      "server_header_transformation": "PASS_THROUGH",
                      "common_http_protocol_options": {
                        "headers_with_underscores_action": "REJECT_REQUEST"
                      },
                      "path_with_escaped_slashes_action": "UNESCAPE_AND_REDIRECT"
                    }
                  }
                ],
                "name": "default/eg/http"
              },
              "max_connections_to_accept_per_socket_event": 1
            },
            "last_updated": "2025-10-09T04:27:24.394Z"
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "static_route_configs": [
        {
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "ready_route",
            "virtual_hosts": [
              {
                "name": "ready_route",
                "domains": ["*"],
                "routes": [
                  {
                    "match": {
                      "prefix": "/"
                    },
                    "direct_response": {
                      "status": 500
                    }
                  }
                ]
              }
            ]
          },
          "last_updated": "2025-10-09T04:27:24.392Z"
        },
        {
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "local_route",
            "virtual_hosts": [
              {
                "name": "prometheus_stats",
                "domains": ["*"],
                "routes": [
                  {
                    "match": {
                      "path": "/stats/prometheus",
                      "headers": [
                        {
                          "name": ":method",
                          "string_match": {
                            "exact": "GET"
                          }
                        }
                      ]
                    },
                    "route": {
                      "cluster": "prometheus_stats"
                    }
                  }
                ]
              }
            ]
          },
          "last_updated": "2025-10-09T04:27:24.366Z"
        }
      ],
      "dynamic_route_configs": [
        {
          "version_info": "bc44981323d08bcb24abad6867942912675bb35bb674f2ee9ae866efbe1375dd",
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "default/eg/http",
            "virtual_hosts": [
              {
                "name": "default/eg/http/www_example_com",
                "domains": ["www.example.com"],
                "routes": [
                  {
                    "match": {
                      "prefix": "/"
                    },
                    "route": {
                      "cluster": "httproute/default/backend/rule/0",
                      "upgrade_configs": [
                        {
                          "upgrade_type": "websocket"
                        }
                      ]
                    },
                    "metadata": {
                      "filter_metadata": {
                        "envoy-gateway": {
                          "resources": [
                            {
                              "namespace": "default",
                              "name": "backend",
                              "kind": "HTTPRoute"
                            }
                          ]
                        }
                      }
                    },
                    "name": "httproute/default/backend/rule/0/match/0/www_example_com"
                  }
                ],
                "metadata": {
                  "filter_metadata": {
                    "envoy-gateway": {
                      "resources": [
                        {
                          "name": "eg",
                          "kind": "Gateway",
                          "namespace": "default",
                          "sectionName": "http"
                        }
                      ]
                    }
                  }
                }
              }
            ],
            "ignore_port_in_host_matching": true
          },
          "last_updated": "2025-10-09T04:49:49.233Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump",
      "dynamic_active_secrets": [
        {
          "name": "xds_certificate",
          "last_updated": "2025-10-09T04:27:24.371Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "xds_certificate",
            "tls_certificate": {
              "certificate_chain": {
                "inline_bytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lFSEsycTVqQU5CZ2txaGtpRzl3MEJBUXNGQURBc01SWXdGQVlEVlFRREV3MWwKYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEVlFRRkV3azVOalExTnpZd056Y3dIaGNOTWpVeE1EQTNNakF6T0RVegpXaGNOTXpBeE1EQTNNakF6T0RVeFdqQU1NUW93Q0FZRFZRUUREQUVxTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBcW50TVVNNm5kYnJuOGdlSS85SVErR2JHbjkvMDFzS1hLbFl2SlI4eEhRRlAKNjJDZ1ZJNGIxZmdKbmRsU2ZqNUxBTGF6QVY3cU8rZFRDUmhmY3BYVWlPQ3NjdVQrNWpvMUpFTVp5UUgvc2J [...]
              },
              "private_key": {
                "inline_bytes": "W3JlZGFjdGVkXQ=="
              }
            }
          }
        },
        {
          "name": "enable-backend-tls/default-ca",
          "version_info": "4c03e110dd30c78748f7fb429bd12747dd862e7566d94953591f560b745b11d9",
          "last_updated": "2025-10-09T04:49:49.237Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "enable-backend-tls/default-ca",
            "validation_context": {
              "trusted_ca": {
                "inline_bytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPekNDQWlPZ0F3SUJBZ0lVWXBVR3ZmWVR1V3ZDQmI2ZGY1OEgwYlBkdTI4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXdNRGd5TURReU5USmFGdzB5TmpFd01EZ3lNRFF5TlRKYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURIR2xkUXdzRTE2QkZocXB2eWZKOEkrQ25UOFpEZFNNT3ZUNm1WQUl [...]
              }
            }
          }
        },
        {
          "name": "xds_trusted_ca",
          "last_updated": "2025-10-09T04:27:24.371Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "xds_trusted_ca",
            "validation_context": {
              "trusted_ca": {
                "inline_bytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHRENDQWdDZ0F3SUJBZ0lFT1g1RFRUQU5CZ2txaGtpRzl3MEJBUXNGQURBc01SWXdGQVlEVlFRREV3MWwKYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEVlFRRkV3azVOalExTnpZd056Y3dIaGNOTWpVeE1EQTNNakF6T0RVeQpXaGNOTXpBeE1EQTNNakF6T0RVeFdqQXNNUll3RkFZRFZRUURFdzFsYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEClZRUUZFd2s1TmpRMU56WXdOemN3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFQKWTdhSCtKYkorcU1aU1F0RU53L0w0eTVDS3lDc0hUVHVqeVZiWDJ4ZWlBdEhtN29TZGc1SEtWZzVlTHpQaUh [...]
              },
              "match_typed_subject_alt_names": [
                {
                  "san_type": "DNS",
                  "matcher": {
                    "exact": "envoy-gateway"
                  }
                }
              ]
            }
          }
        }
      ]
    }
  ]
}
